test/errors/array3.ls

#OUTPUT
#Syntax Error: Invalid token in expression.
# -> [15] numbers[1] = =
#
#END

#RET 1

extern func printf(s:str, ...)

func main -> int
    numbers : int[10];
begin
    numbers[1] = =
    
    return 0;
end

